# athena-welcome-rs

./: .gitignore  Cargo.toml  build.rs  readme.md
assets/: hacking_variables.csv  roles.csv  tools_recipe.png~
csv/: tools_recipe.csv
src/: configs.rs  main.rs  settings.rs
src/gui/: gobjects.rs  img_resource.xml  logic.rs  mod.rs  table_win.rs  welcome_win.rs
src/gui/role_tools_win/: mod.rs
src/utils/: mod.rs
