[package]
name = "athena-welcome-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.79"
dirs = "5.0.1"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_12"] }
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"] }
toml = "0.8.8"
whoami = "1.4.1"
strum = "0.25"
strum_macros = "0.25"
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["process", "rt-multi-thread"] }
async-channel = "2.2.0"
